# lse_fatrop

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  casadi_opti_reference.py  cmake_install.cmake  debug_fatrop.py  debug_fatrop_A.mtx  debug_fatrop_B.mtx  debug_fatrop_C.mtx  debug_fatrop_D.mtx  debug_fatrop_I.mtx  debug_fatrop_actual.mtx  debug_fatrop_errors.mtx  debug_fatrop_expected.mtx  plot_trajectory.py  point_mass_lse_obstacle  point_mass_obstacle
src/: lse.hpp  main.cpp  main_lse.cpp  nnz_report.hpp  point_mass_lse_ocp.hpp  point_mass_obstacle_ocp.hpp
